Fix extra spacing at bottom of page

--- a/web-app/components/navbar/navbar.module.css
+++ b/web-app/components/navbar/navbar.module.css
@@ -6,8 +6,7 @@
   grid-area: nav;
 }
 
-.navbar,
-.spacer {
+.navbar {
   height: var(--nav-height);
   width: 100%;
 }
